Attempt to fix overflow glitch

--- a/general.css
+++ b/general.css
@@ -19,12 +19,18 @@ body{
 /* Queries that change the layout of the page based on the view */
 @media screen and (max-width: 590px){
     h1 { display: none; }
-    .personal_info{width: 305px; margin: 0 auto}
+    h2, h3{
+        text-align: left;
+    }
+    .personal_info{width: 100%;}
     .contact_link_individual {display:inline-block; width:50%; text-align: center;}
  }
 
 @media screen and (min-width: 590px){
     .personal_info{float:right; margin:0;}
+    h2,h3{
+        text-align: right;
+    }
     .contact_link_individual {margin: 0px 30px 0 30px;}
 }
 
@@ -45,7 +51,6 @@ h2,h3,.contact_links a,.pro_pic{
 h2,h3{
     padding-right: 120px;
     white-space: nowrap;
-    text-align: right;
 }
 
 h1{
@@ -90,7 +95,7 @@ h4{
     margin-top: 0px;
     margin-bottom: 5px;
     padding-bottom: 5px;
-    font-size: 26px;
+    font-size: 23px;
     color:#333;
     border-bottom: 2px dotted;
     border-color: #999;
